Fixed faq display on mobile

--- a/style.css
+++ b/style.css
@@ -362,4 +362,8 @@ footer {
     .button{
         width: 40%;
     }
+    
+    #faq {
+        margin-top: 30%;
+    }
 }
